--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -1,3 +1,266 @@
+/* Custom Font Styles */
+@font-face {
+    font-family: Centra;
+    src: url('./fonts/CentraNo2-Bold.ttf');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: Centra;
+    src: url('./fonts/CentraNo2-Medium.ttf');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: Centra;
+    src: url('./fonts/CentraNo2-Book.ttf');
+    font-weight: 400;
+}
+/* End of Custom Font Styles */
+
+/* Default CSS */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 75px;
+}
+
+body {
+    font-weight: 400;
+    overflow-x: hidden;
+    position: relative;
+    background-color: #121212 !important;
+    color: #fff !important;
+    font-family: 'Centra', sans-serif !important;
+}
+/* End of Default CSS */
+
+/* Navbar CSS */
+nav.navbar {
+    padding: 20px 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 9999;
+    transition: 0.32s ease-in-out;
+    background-color: #121212;
+}
+
+
+nav.navbar a.navbar-brand {
+    width: 15%;
+    color: white;
+}
+
+nav.navbar .navbar-nav .nav-link.navbar-link {
+    font-weight: 400;
+    color: #fff;
+    letter-spacing: 0.8px;
+    padding: 0 25px;
+    font-size: 18px;
+    opacity: 1;
+    background-color: #121212;
+}
+
+nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
+nav.navbar .navbar-nav a.nav-link.navbar-link.active {
+    opacity: 1;
+    color: #F06000;
+}
+
+span.navbar-text {
+    display: flex;
+    align-items: center;
+}
+
+.navbar-text button {
+    font-weight: 700;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 18px 34px;
+    font-size: 18px;
+    margin-left: 18px;
+    position: relative;
+    background-color: transparent;
+    transition: 0.3s ease-in-out;
+}
+
+.navbar-text button span {
+    z-index: 1;
+}
+
+.navbar-text button::before {
+    content: "";
+    width: 0%;
+    height: 100%;
+    position: absolute;
+    background-color: #fff;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    transition: 0.3s ease-in-out;
+}
+
+.navbar-text button:hover {
+    color: #121212;
+}
+
+.navbar-text button:hover::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+nav.navbar .navbar-toggler:active,
+nav.navbar .navbar-toggler:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+nav.navbar .navbar-toggler-icon {
+    width: 24px;
+    height: 17px;
+    background-image: none;
+    position: relative;
+    border-bottom: 2px solid #fff;
+    transition: all 300ms linear;
+    top: -2px;
+}
+
+nav.navbar .navbar-toggler-icon:focus {
+    border-bottom: 2px solid #fff;
+}
+
+nav.navbar .navbar-toggler-icon:after,
+nav.navbar .navbar-toggler-icon:before {
+    width: 24px;
+    position: absolute;
+    height: 2px;
+    background-color: #fff;
+    top: 0;
+    left: 0;
+    content: '';
+    z-index: 2;
+    transition: all 300ms linear;
+}
+
+/* End of Navbar CSS */
+
+/* Home Page CSS */
+.home {
+    margin-top: -50px;
+    position: relative;
+    padding-top: 15vh;
+    background-position: top center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.home .container {
+    text-align: center;
+    height: 70vh;
+    left: 0;
+}
+    
+.home img {
+    left: 0;
+    opacity: 0.75;
+    position: absolute;
+    right: 0;
+    z-index: -1;
+}
+
+.home .backgroundImg {
+    height: 75vh;
+    width: 100vw;
+    object-fit: cover;
+}
+
+.home h1 {
+    font-size: 65px;
+    font-weight: 700;
+    letter-spacing: 0.8px;
+    line-height: 1;
+    margin-bottom: 20px;
+    margin-top: 25vh;
+    display: block;
+}
+
+.home p {
+    font-size: 30px;
+    font-weight: 500;
+    margin-top: 5vh;
+    display: block;
+}
+
+.home .onlineMenu {
+    margin-top: 15vh;
+}
+
+.home .onlineMenu a {
+    font-weight: 700;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 18px 34px;
+    font-size: 18px;
+    position: relative;
+    background-color: transparent ;
+    transition: 0.3s ease-in-out;
+    text-decoration: none;
+}
+
+.home .onlineMenu a::before {
+    content: "";
+    width: 0%;
+    height: 100%;
+    position: absolute;
+    background-color: #fff;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    transition: 0.3s ease-in-out;
+}
+
+.home .onlineMenu a:hover {
+    color: #121212;
+}
+
+.home .onlineMenu a:hover::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+/* End of Home Page CSS */
+
+/* Footer CSS */
+.footer {
+    padding-top: 5vh;
+    margin-bottom: 48px;
+    color: #303030;
+    font-size: 14px;
+    text-align: center;
+    position: relative;
+}
+
+.footer p {
+    font-weight: 400;
+    font-size: 14px;
+    color: #B8B8B8;
+    letter-spacing: 0.5px;
+    margin-top: 30px;
+    align-items: center;
+    justify-content: center;
+}
+
+/* End of Footer CSS */
 .ms-auto {
     overflow: auto;
     white-space: nowrap;
