--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -331,6 +331,7 @@ body {
     padding-bottom: 10px;
     margin-bottom: 10px;
     color: white;
+    padding-left: 5px;
 }
 
 .login .loginButton button {
@@ -443,6 +444,7 @@ body {
     padding-bottom: 10px;
     margin-bottom: 10px;
     color: white;
+    padding-left: 5px;
 }
 
 .edit .editHeader button {
