--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -669,12 +669,17 @@ body {
 }
 
 .lunch-menu .container {
-    height: 70vh;
+    /* height: 70vh; */
     left: 0;
     margin-top: 125px;
 }
 
 .lunch-menu .section-header h1 {
+    text-align: center;
+}
+
+.lunch-menu .section-header p {
+    font-size: 25px;
     text-align: center;
 }
 
